# lab08

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  README.md  REPORT.md
.github/workflows/: ci.yml  cmake.yml  release.yml
_builds/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_print
_builds/Testing/Temporary/: CTestCostData.txt
_builds/clang-cxx14/: CMakeCache.txt  Makefile  cmake_install.cmake  demo
_builds/clang-cxx14/_3rdParty/polly/: saved-arguments
_builds/default/: CMakeCache.txt  Makefile  cmake_install.cmake  demo
_builds/default/_3rdParty/polly/: saved-arguments
_logs/polly/clang-cxx14/: log-0.txt  log.txt
_logs/polly/default/: log.txt
demo/: main.cpp
